在src目录下创建了db目录存放表结构，并修改了app.py文件。在src/utils目录下加了session.py和base.py文件用来连接数据库，修改了mysql_db.py文件的内容，修改了src/api目录下的protocols.py和api.py文件。

--- a/config/config.json
+++ b/config/config.json
@@ -6,8 +6,8 @@
     "msyql": {
         "host": "127.0.0.1",
         "port": 3306,
-        "user": "root",
-        "password": "123456",
-        "database": "test_db"
+        "user": "molly",
+        "password": "molly@2025",
+        "database": "molly"
     }
 }
